--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf8'>
 		<title>Укбар сила, Трагёр могила</title>
-		<link rel="stylesheet" href="index.scss">
+		<link rel="stylesheet" href="index.css">
 	</head>
 
 
